# attr_analyst

./: LICENSE  README.md  pyproject.toml
src/attr_analyst/: __init__.py
src/attr_analyst/core/: attr_calculator.py
src/attr_analyst/io/: __init__.py  _relation.py
tests/: test_calculate_attr.py  test_calculate_attr_from_config.py  test_read_relation_config.py  test_relation_config_file_med.py
tests/data/: test_relation_config_file.json  test_relation_config_file_med.json
tests/output/: test_calculate_attr.xlsx  test_calculate_attr_2.xlsx  test_calculate_attr_3.xlsx  test_calculate_attr_4.xlsx
